--- a/charts/frontend/values.yaml
+++ b/charts/frontend/values.yaml
@@ -8,12 +8,12 @@ backend:
 ingress:
   enabled: true
   className: traefik
-  host: todo-frontend.todo.svc.cluster.local
+  #host: todo-frontend.todo.svc.cluster.local
   serviceName: todo-frontend
   tls:
   - secretName: todo-frontend-tls
-    hosts:
-    - todo-frontend.todo.svc.cluster.local
+    #hosts:
+    #- todo-frontend.todo.svc.cluster.local
   annotations:
     kubernetes.io/ingress.className: traefik
     cert-manager.io/cluster-issuer: local-ca
