--- a/charts/frontend/templates/ingress.yaml
+++ b/charts/frontend/templates/ingress.yaml
@@ -23,15 +23,16 @@ spec:
   {{- if .Values.ingress.tls }}
   tls:
   {{- range .Values.ingress.tls }}
-    - hosts:
-    {{- range .hosts }}
+    - hosts:{{ if .hosts }}
+      {{- range .hosts }}
       - {{ . | quote }}
-    {{- end }}
+      {{ end }}{{ else }}
+      - todo-frontend.todo.svc.cluster.local{{ end }}
       secretName: {{ .secretName }}
   {{- end }}
   {{- end }}
   rules:
-    - host: {{ .Values.ingress.host | quote }}
+    - host: {{ if .Values.ingress.host }}"{{ .Values.ingress.host }}"{{ else }}"{{ (include "frontend.fullname" .) | default "todo-frontend" }}.{{ .Release.Namespace }}.svc.cluster.local"{{ end }}
       http:
         paths:
           - path: /
