--- a/charts/backend/templates/deployment.yaml
+++ b/charts/backend/templates/deployment.yaml
@@ -1,63 +1,53 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "backend.fullname" . }}
+  name: "{{ .Release.Name }}-{{ .Chart.Name }}"
   labels:
-    app.kubernetes.io/app: {{ .Release.Name }}
-    app.kubernetes.io/name: {{ .Release.Name }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
-    app.kubernetes.io/part-of: {{ .Chart.Name }}
-    app.kubernetes.io/component: {{ include "backend.fullname" . }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    {{- include "labels" . | nindent 4 }}
   annotations:
+    meta.helm.sh/release-name: {{ .Release.Name }}
     alloy.io/scrape: "true"
     loki.io/logs: "true"
     prometheus.io/scrape: "true"
-    prometheus.io/port: "8080"
+    prometheus.io/port: {{ .Values.service.listenPort | default "8080" | quote }}
     prometheus.io/path: "/metrics"
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: {{ include "backend.fullname" . }}
+      app.kubernetes.io/instance: {{ .Release.Name  | quote }}
+      app.kubernetes.io/name: {{ .Chart.Name | quote }}
   template:
     metadata:
       labels:
-        app: {{ include "backend.fullname" . }}
-        app.kubernetes.io/app: {{ .Release.Name }}
-        app.kubernetes.io/name: {{ .Release.Name }}
-        app.kubernetes.io/instance: {{ .Release.Name }}
-        app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
-        app.kubernetes.io/part-of: {{ .Chart.Name }}
-        app.kubernetes.io/component: {{ include "backend.fullname" . }}
-        app.kubernetes.io/managed-by: {{ .Release.Service }}
+        app.kubernetes.io/instance: {{ .Release.Name | quote }}
+        app.kubernetes.io/name: {{ .Chart.Name | quote }}
       annotations:
         alloy.io/scrape: "true"
         loki.io/logs: "true"
         prometheus.io/scrape: "true"
-        prometheus.io/port: "8080"
+        prometheus.io/port: {{ .Values.service.listenPort | default "8080" | quote }}
         prometheus.io/path: "/metrics"
     spec:
       volumes:
         {{- if .Values.persistence.enabled }}
         - name: data
           persistentVolumeClaim:
-            claimName: {{ include "backend.fullname" . }}
+            claimName: "{{ .Release.Name }}-{{ .Chart.Name }}"
         {{- else }}
         - name: data
           emptyDir: {}
         {{- end }}
         - name: init-script
           configMap:
-            name: {{ .Release.Name }}-init-script
+            name: "{{ .Release.Name }}-{{ .Chart.Name }}-init-script"
             defaultMode: 0755
       #securityContext:
       #  fsGroup: 200
       containers:
-        - name: {{ include "backend.fullname" . }}
-          image: "{{ .Values.image.repository }}:{{ default .Chart.AppVersion .Values.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+        - name: {{ .Chart.Name | quote }}
+          image: {{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.version }}
+          imagePullPolicy: {{ .Values.image.pullPolicy | default "IfNotPresent" }}
           ports:
             - containerPort: {{ .Values.service.listenPort | default "8080" }}
               name: http
@@ -73,12 +63,12 @@ spec:
               mountPath: /data
           readinessProbe:
             httpGet:
-              path: /healthz
-              port: {{ .Values.service.listenPort | default "8080" }}
+                path: /healthz
+                port: {{ .Values.service.listenPort | default "8080" }}
             periodSeconds: 30
           livenessProbe:
             httpGet:
-              path: /healthz
-              port: {{ .Values.service.listenPort | default "8080" }}
+                path: /healthz
+                port: {{ .Values.service.listenPort | default "8080" }}
             initialDelaySeconds: 60
             periodSeconds: 30
