--- a/charts/backend/templates/init-configmap.yaml
+++ b/charts/backend/templates/init-configmap.yaml
@@ -1,16 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "backend.fullname" . }}-init-script
+  name: "{{ .Release.Name }}-{{ .Chart.Name }}-init-script"
   labels:
-    app: {{ .Release.Name }}
-    app.kubernetes.io/app: {{ .Release.Name }}
-    app.kubernetes.io/name: {{ .Release.Name }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
-    app.kubernetes.io/part-of: {{ .Chart.Name }}
-    app.kubernetes.io/component: {{ include "backend.fullname" . }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    {{- include "labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "-5"
@@ -18,11 +11,11 @@ metadata:
 data:
   init.sh: |
     #!/bin/sh
-    # Wait for todoapp to be ready
-    {{- $svcName := default (include "backend.fullname" .) .Values.service.name }}
-    {{- $svcNS := default .Release.Namespace .Values.service.namespace }}
-    {{- $svcPort := int (default 8080 .Values.service.port) }}
-    {{- $svcFQDN := printf "%s.%s.svc.cluster.local:%d" $svcName $svcNS $svcPort }}
+    {{- $AppName := default .Chart.Name  }}
+    {{- $ReleaseName := default .Release.Name  }}
+    {{- $svcNS := default .Release.Namespace }}
+    {{- $svcPort := int (default 8000 .Values.service.port) }}
+    {{- $svcFQDN := printf "%s-%s.%s.svc.cluster.local:%d" $ReleaseName $AppName $svcNS $svcPort }}
     until curl -sf http://{{ $svcFQDN }}/healthz; do
       echo "{\"level\":\"info\", \"message\":\"Waiting for {{ .Release.Name }} to be ready\"}"
       sleep 5
