--- a/charts/backend/templates/init-job.yaml
+++ b/charts/backend/templates/init-job.yaml
@@ -1,17 +1,11 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: "{{ include "backend.fullname" . }}-init-job"
+  name: "{{ .Release.Name }}-{{ .Chart.Name }}-init-job"
   labels:
-    app: {{ .Release.Name }}
-    app.kubernetes.io/app: {{ .Release.Name }}
-    app.kubernetes.io/name: {{ .Release.Name }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
-    app.kubernetes.io/part-of: {{ .Chart.Name }}
-    app.kubernetes.io/component: {{ include "backend.fullname" . }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+  {{- include "labels" . | nindent 4 }}
   annotations:
+    meta.helm.sh/release-name: {{ .Release.Name }}
     "helm.sh/hook": "post-install,post-upgrade"
     "helm.sh/hook-delete-policy": "hook-succeeded"
     "helm.sh/hook-weight": "5"
@@ -21,7 +15,7 @@ spec:
       volumes:
         - name: init-script-volume
           configMap:
-            name: "{{ include "backend.fullname" . }}-init-script"
+            name: "{{ .Release.Name }}-{{ .Chart.Name }}-init-script"
             defaultMode: 0755
       containers:
         - name: init-job-container
