--- a/charts/backend/templates/service.yaml
+++ b/charts/backend/templates/service.yaml
@@ -1,19 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "backend.fullname" . }}
+  name: "{{ .Release.Name }}-{{ .Chart.Name }}"
   labels:
-    app: {{ .Release.Name }}
-    app.kubernetes.io/app: {{ .Release.Name }}
-    app.kubernetes.io/name: {{ .Release.Name }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
-    app.kubernetes.io/part-of: {{ .Chart.Name }}
-    app.kubernetes.io/component: {{ include "backend.fullname" . }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    {{- include "labels" . | nindent 4 }}
   annotations:
+    meta.helm.sh/release-name: {{ .Release.Name }}
+    meta.helm.sh/chart-name: {{ .Chart.Name }}
     prometheus.io/scrape: "true"
-    prometheus.io/port: "8080"
+    prometheus.io/port: "{{ .Values.service.port | default "8080" }}"
     prometheus.io/path: "/metrics"
 spec:
   type: {{ .Values.service.type }}
@@ -23,4 +18,5 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: {{ include "backend.fullname" . }}
+    app.kubernetes.io/instance: {{ .Release.Name | quote }}
+    app.kubernetes.io/name: {{ .Chart.Name | quote }}
