--- a/charts/frontend/values.yaml
+++ b/charts/frontend/values.yaml
@@ -1,9 +1,9 @@
 service:
   port: 80
 
-backend:
-  host: todo-backend.todo.svc.cluster.local
-  port: 8080
+backend: {}
+  #host: todo-backend.todo.svc.cluster.local
+  #port: 8080
 
 ingress:
   enabled: true
