--- a/charts/frontend/templates/service.yaml
+++ b/charts/frontend/templates/service.yaml
@@ -17,3 +17,5 @@ spec:
   ports:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.port }}
+      protocol: TCP
+      name: http
